Bug 255175 - The menus are often invisible in Rekonq while KWin compositing is active
Summary: The menus are often invisible in Rekonq while KWin compositing is active
Status: RESOLVED FIXED
Alias: None
Product: rekonq
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 0.6.1
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Andrea Diamantini
URL:
Keywords:
: 259608 262855 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-10-25 08:22 UTC by Csanád Tóth
Modified: 2011-05-22 20:17 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Rekonq bug - invisible menus (169.14 KB, image/jpeg)
2010-10-25 08:22 UTC, Csanád Tóth
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Csanád Tóth 2010-10-25 08:22:14 UTC
Created attachment 52842 [details]
Rekonq bug - invisible menus

Version:           0.6.1 (using KDE 4.5.2) 
OS:                Linux

The menu is opened and functional, but invisible. Only the shadows are shown.
I've not seen this bug outside Rekonq. A screenshot:
http://imagebin.ca/view/uQI2UzvU.html

Rekonq 0.6.1
KDE SC 4.5.2
Mesa 7.9~git20100924
xserver-xorg-video-intel 2.1.12

Reproducible: Sometimes
Comment 1 Christoph Feck 2010-10-25 08:41:56 UTC
Does rekonq use graphicssystem -raster or did you set it?
Comment 2 Andrea Diamantini 2010-10-25 09:10:42 UTC
(In reply to comment #1)
> Does rekonq use graphicssystem -raster or did you set it?

Yes, it does. Is it the problem?
Comment 3 Csanád Tóth 2010-10-25 09:21:05 UTC
I've started Rekonq with "--graphicssystem native", and the problem is gone.
Comment 4 Csanád Tóth 2010-10-25 09:31:41 UTC
I'm not alone with this problem.
http://www.mail-archive.com/rekonq@kde.org/msg01611.html
Rekonq's default graphicssystem is raster. Can I switch back permanently to native?
Comment 5 Andrea Diamantini 2010-10-25 18:30:10 UTC
commit ef043a4fb69f68e4a7258e84194c567f64edc51f
branch master
Author: Andrea Diamantini <adjam7@gmail.com>
Date:   Mon Oct 25 18:32:50 2010 +0200

    Remove raster graphics system by default.
    
    This is the cause of some problems with UI (eg: contextual menus not shown),
    probably related to some HW/driver combinations
    
    BUG:255175
    CCMAIL:bigbrovar@gmail.com

diff --git a/src/main.cpp b/src/main.cpp
index 2a5ee52..db6a435 100644
--- a/src/main.cpp
+++ b/src/main.cpp
@@ -189,10 +189,7 @@ extern "C" KDE_EXPORT int kdemain(int argc, char **argv)
         kWarning() << "rekonq is already running!";
         return 0;
     }
-#if defined(Q_WS_X11)
-    // On X11, the raster engine gives better performance than native.
-    QApplication::setGraphicsSystem(QString::fromLatin1("raster"));
-#endif
+
     Application app;
 
     return app.exec();
Comment 6 Andrea Diamantini 2010-10-25 18:30:48 UTC
commit f936bf03e85e511a88bf96df1e3cede390776735
branch Branches.0.6
Author: Andrea Diamantini <adjam7@gmail.com>
Date:   Mon Oct 25 18:32:50 2010 +0200

    Remove raster graphics system by default.
    
    This is the cause of some problems with UI (eg: contextual menus not shown),
    probably related to some HW/driver combinations
    
    BUG:255175
    CCMAIL:bigbrovar@gmail.com

diff --git a/src/main.cpp b/src/main.cpp
index 2a5ee52..db6a435 100644
--- a/src/main.cpp
+++ b/src/main.cpp
@@ -189,10 +189,7 @@ extern "C" KDE_EXPORT int kdemain(int argc, char **argv)
         kWarning() << "rekonq is already running!";
         return 0;
     }
-#if defined(Q_WS_X11)
-    // On X11, the raster engine gives better performance than native.
-    QApplication::setGraphicsSystem(QString::fromLatin1("raster"));
-#endif
+
     Application app;
 
     return app.exec();
Comment 7 Christoph Feck 2010-12-13 17:02:43 UTC
*** Bug 259608 has been marked as a duplicate of this bug. ***
Comment 8 Christoph Feck 2011-01-11 14:51:03 UTC
*** Bug 262855 has been marked as a duplicate of this bug. ***
Comment 9 Robert Simmons 2011-05-22 20:17:15 UTC
I can confirm that the bug is fixed in Kubuntu 11.04 with KDE 4.6.3, Qt 4.7.2, and xf86-video-intel 2.14.0.