Remove raster graphics system by default.

This is the cause of some problems with UI (eg: contextual menus not shown),
probably related to some HW/driver combinations

BUG:255175
CCMAIL:bigbrovar@gmail.com