src/main.cpp
@@ -189,10 +189,7 @@ extern "C" KDE_EXPORT int kdemain(int argc, char **argv)
         kWarning() << "rekonq is already running!";
         return 0;
     }
-#if defined(Q_WS_X11)
-    // On X11, the raster engine gives better performance than native.
-    QApplication::setGraphicsSystem(QString::fromLatin1("raster"));
-#endif
+
     Application app;
 
     return app.exec();
